# udsgpt

./: .gitignore  bookstack-err-db-events.txt  bookstack-pepr-missing-db.txt  bookstack-pepr-no-exemption.txt  core-deployed-events-2.txt  core-deployed-events.txt  core-deployed-logs-2.txt  core-deployed-logs.txt  core-mid-deploy-events.txt  notes.md
bookstack/: analyze-failing-package.ipynb
core/: core.ipynb  vectorize.ipynb
event-pusher/: go.mod  go.sum  main.go  query.sh
event-queryer/: main.go
scratch/: bookstack-no-exemption-error.txt  bookstack-no-exemption-events.txt  bookstart-err-db-logs.txt  pyproject.toml  tokenize.ipynb
scratch/simple/: events.txt
simple/: logs.txt  main.ipynb
