[tool.poetry]
name = "udsgpt"
version = "0.1.0"
description = ""
authors = ["unclegedd <gedd@defenseunicorns.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.42.0"
jupyterlab = "^4.2.4"
tiktoken = "^0.7.0"
pymilvus = "^2.4.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
